Fix the spacing when the window is resized

--- a/src/assets/style/Body.css
+++ b/src/assets/style/Body.css
@@ -1,7 +1,7 @@
 .mainContainer {
-    width: 100vw;
+    background-color: #141427;
 }
 
 .background{
-    width: 100vw;
+    width: 98.5vw;
 }
